<resources>
    <string name="app_name">Family_Pet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Inicio">Inicio</string>
    <string name="menu_MiCuenta">Mi Cuenta</string>
    <string name="menu_Adoptame">Adóptame</string>
    <string name="menu_MascotasPerdidas">Mascotas Perdidas</string>
    <string name="menu_Reportar">Reportar</string>
</resources>